# HS_Panel_Solver

./: .gitignore  CMakeLists.txt  README.md
src/: BaseInitializer.cpp  BaseInitializer.hpp  CMakeLists.txt  DataWriters.cpp  DataWriters.hpp  HS_Solver.cpp  InitFromFile.cpp  InitFromFile.hpp  InitFromNaca.cpp  InitFromNaca.hpp  Panel.cpp  Panel.hpp  Point.cpp  Point.hpp  Solver.cpp  Solver.hpp  main.cpp  panel.cpp  panel.hpp  point.cpp  point.hpp  solver.cpp  solver.hpp
